# coto

./: Cargo.toml  README.md  old_view.rs
src/: config.rs  lib.rs  main.rs  query.rs  ui.rs
styles/: dark.toml  neutral.toml  noir.toml  original.toml  tangerine.toml  template.txt
