[package]
name = "coto"
version = "0.1.0"
authors = ["MetallicSquid"]
license = "Apache-2.0"
description = "A command line todoist client"
readme = "README.md"
homepage = "https://gcmacneil.com/coto.html"
repository = "https://github.com/MetallicSquid/coto"
keywords = ["cli", "productivity", "todoist", "todo"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
reqwest = "0.10.6"
tokio = "0.2.21"
async-std = "1.6.2"
uuid = { version = "0.8.1", features = ["v4"] }
console = "0.11.3"
dialoguer = "0.6.2"
device_query = "0.2.4"
serde_json = "1.0.56"
